@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.6259 2004/06/21 08:24:05 martti Exp $
+$NetBSD: CHANGES,v 1.6260 2004/06/21 08:30:23 xtraeme Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -2998,3 +2998,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Added xfce4-windowlist-plugin-0.1.0 [martti 2004-06-21]
 	Updated gpass to 0.4.4 [jmmv 2004-06-21]
 	Updated vim to 6.3 [martti 2004-06-21]
+	Updated dovecot to 0.99.10.6 [xtraeme 2004-06-21]
